--- a/Prototype/Prototype/appsettings.json
+++ b/Prototype/Prototype/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Prototype;User ID=sa;Password=Secret@123"
+    "DefaultConnection": "Server=localhost;Database=PrototypeMRV;User ID=sa;Password=Secret@123"
   },
   "MongoDbConnection": {
     "CollectionName": "Servidor",
