correção de migration

--- a/Prototype/Prototype.Domain/Prototype.Domain.csproj
+++ b/Prototype/Prototype.Domain/Prototype.Domain.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\Repositories\CustomRepositories\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
   <ItemGroup>
