--- a/MessageConsumerApi/MessageConsumer.Application/MessageConsumer.Application.csproj
+++ b/MessageConsumerApi/MessageConsumer.Application/MessageConsumer.Application.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
@@ -14,6 +16,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MessageConsumer.Infra\MessageConsumer.Infra.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="MailFake.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MailFake.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="MailFake.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MailFake.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
