Correct API Message

--- a/MessageConsumerApi/MessageConsumerApi/appsettings.json
+++ b/MessageConsumerApi/MessageConsumerApi/appsettings.json
@@ -24,5 +24,6 @@
     "password": "MrV@Te5t3",
     "useDefaultCredentials": true,
     "from": "test@test.com"
-  }
+  },
+  "UrlLogException": "C:\\inetpub\\wwwroot\\LogException\\"
 }
